; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/init/extr_miscinit.c_SetOuterUserId.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/init/extr_miscinit.c_SetOuterUserId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SecurityRestrictionContext = common dso_local global i64 0, align 8
@OuterUserId = common dso_local global i8* null, align 8
@CurrentUserId = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @SetOuterUserId to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SetOuterUserId(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @SecurityRestrictionContext, align 8
  %4 = icmp eq i64 %3, 0
  %5 = zext i1 %4 to i32
  %6 = call i32 @AssertState(i32 %5)
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @OidIsValid(i8* %7)
  %9 = call i32 @AssertArg(i32 %8)
  %10 = load i8*, i8** %2, align 8
  store i8* %10, i8** @OuterUserId, align 8
  %11 = load i8*, i8** %2, align 8
  store i8* %11, i8** @CurrentUserId, align 8
  ret void
}

declare dso_local i32 @AssertState(i32) #1

declare dso_local i32 @AssertArg(i32) #1

declare dso_local i32 @OidIsValid(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
